worked on a bug

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,7 +28,7 @@
               <li class="form-control">{{this.id}}. {{this.burger_name}}</li>
               <span class="input-group-btn">
                 <button class="btn btn-info whine-button" type="button">Whine!</button>
-                <button class="btn btn-danger delete-burger " data-id="{{this.id}}"><i></i>DELETE!</button>
+                {{!-- <button class="btn btn-danger delete-burger " data-id="{{this.id}}"><i></i>DELETE!</button> --}}
               </span>
             </div>
           {{/if}}
